# nsnetsim

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
contrib/: network.ini  sim
contrib/test-environment/: Dockerfile  docker-compose.yml  full-test  runtest
nsnetsim/: __init__.py  bird_router_node.py  exabgp_router_node.py  exceptions.py  generic_node.py  namespace_network_interface.py  namespace_node.py  netns.py  router_node.py  stayrtr_server_node.py  switch_node.py  topology.py  version.py
src/nsnetsim/: __init__.py  bird_router_node.py  exabgp_router_node.py  exceptions.py  generic_node.py  namespace_network_interface.py  namespace_node.py  netns.py  router_node.py  stayrtr_server_node.py  switch_node.py  topology.py  version.py
tests/: test.py.old  test_bird_router_node.py  test_exabgp_router_node.py  test_router_node.py
tests/bird_router_node/: __init__.py  r1.conf  r2.conf  routerX.conf  test_bird_router_node.py
tests/exabgp_router_node/: routerX.conf  test_exabgp_router_node.py
tests/stayrtr_server_node/: __init__.py  test_exabgp_router_node.py
