[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"


[project]
name = "nsnetsim"
description = "Network namespace network simulator."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Nigel Kukard", email = "nkukard@LBSD.net" }
]
keywords = ["library", "networking", "simulation"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = [
# NK: Add these back after development
    "birdclient @ git+https://gitlab.oscdev.io/software/birdclient.git@master",
    "packaging",
]

[project.urls]
Homepage = "https://gitlab.oscdev.io/software/nsnetsim"
"Issue Tracker" = "https://gitlab.oscdev.io/software/nsnetsim/-/issues"
"Source Code" = "https://gitlab.oscdev.io/software/nsnetsim"
#Documentation = "https://software.pages.oscdev.io/nsnetsim"


[tox]
isolated_build = true


[tool.poetry]
name = "nsnetsim"
#version = "x.x.x"
description = "Network namespace network simulator."
authors = ["Nigel Kukard <nkukard@LBSD.net>"]
packages = [
    { include = "nsnetsim" }
]


[tool.black]
line-length = 132


[tool.isort]
line_length = 120
profile = "black"


[tool.mypy]
ignore_missing_imports = true
strict = true


[tool.pylint]
load-plugins = [
    "pylint.extensions.broad_try_clause",
    "pylint.extensions.code_style",
    "pylint.extensions.emptystring",
    "pylint.extensions.comparetozero",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.confusing_elif",
    "pylint.extensions.for_any_all",
    "pylint.extensions.bad_builtin",
    "pylint.extensions.mccabe",
    "pylint.extensions.docstyle",
    "pylint.extensions.check_elif",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.no_self_use",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.docparams",
    "pylint.extensions.redefined_loop_name",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
]

[tool.pylint.broad_try_clause]
max-try-statements = 5

[tool.pylint.message_control]
max-line-length = 132
# C0199: First line empty in method docstring (docstring-first-line-empty)
# R0801: Similar lines in X files
# R6103: Use '....' instead (assignment on IF line)
disable = "C0199,R0801,R6103"
