[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "nsnetsim"
description = "Network namespace network simulator."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
	{ name = "Nigel Kukard", email = "nkukard@LBSD.net" }
]
keywords = ["library", "networking", "simulation"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = [
# NK: Add these back after development
    "birdclient @ git+https://gitlab.oscdev.io/software/birdclient.git@master",
    "packaging",
]

[project.urls]
Homepage = "https://gitlab.oscdev.io/software/nsnetsim"
"Issue Tracker" = "https://gitlab.oscdev.io/software/nsnetsim/-/issues"
"Source Code" = "https://gitlab.oscdev.io/software/nsnetsim"
#Documentation = "https://software.pages.oscdev.io/nsnetsim"


[tox]
isolated_build = true


[tool.poetry]
name = "nsnetsim"
#version = "x.x.x"
description = "Network namespace network simulator."
authors = ["Nigel Kukard <nkukard@LBSD.net>"]
packages = [
    { include = "nsnetsim" }
]


[tool.black]
line-length = 132


[tool.isort]
line_length = 120
profile = "black"


[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff]
line-length = 132
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D202", "D203", "D211", "D212", "EM101", "EM102", "ISC001", "TID252", "TRY003"]
fixable = ["ALL"]
unfixable = []
exclude = [
    ".git",
    ".idea",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv"
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings
docstring-code-format = true


[tool.pytest.ini_options]
pythonpath = ["src"]


[tool.coverage.run]
source_pkgs = ["nsnetsim"]
relative_files = true
